# machine-learning-playground

./: CMakeLists.txt  README.md
include/entities/: DataPoint.hpp  DataUnit.hpp
include/lib/: distance.hpp  logger.hpp
include/lib/classifiers/: BaseClassifier.hpp  KMeans.hpp  KNN.hpp
include/lib/data-handlers/: BaseDataHandler.hpp  MNISTDataHandler.hpp
include/lib/distance/: chiSquare.hpp  correllation.hpp  euclidean.hpp  minkowsky.hpp
include/lib/models/: BaseModel.hpp  KMeans.hpp  KNN.hpp
src/: Main.cpp  Test.cpp
src/entities/: DataPoint.cpp  DataUnit.cpp
src/lib/: debug.cpp  distance.cpp
src/lib/classifiers/: KMeans.cpp  KNN.cpp
src/lib/data-handlers/: BaseDataHandler.cpp  MNISTDataHandler.cpp
src/lib/distance/: chiSquare.cpp  correllation.cpp  euclidean.cpp  minkowsky.cpp
src/lib/models/: KMeans.cpp  KNN.cpp
src/lib/utils/: collections.cpp  debug.cpp  endian.cpp  errors.cpp  file.cpp  log.cpp  timer.cpp
src/tests/: KMeans.cpp  distance.cpp  knn.cpp  utils.cpp
